fix: Replaced the words "competitions" to "categories"
Also, fixed the logic for updateProfile to stop de-actiativating an
account after it has been used by a user.
