# openapi.yaml
@@ -518,7 +518,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /api/admin/competitions:
+  /api/admin/categories:
     post:
       tags:
         - Admin
@@ -631,7 +631,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /api/admin/competitions/addContestant:
+  /api/admin/categories/addContestant:
     post:
       tags:
         - Admin
@@ -675,7 +675,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /api/admin/competitions/removeContestant:
+  /api/admin/categories/removeContestant:
     post:
       tags:
         - Admin
@@ -719,7 +719,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /api/admin/competitions/results:
+  /api/admin/categories/results:
     get:
       tags:
         - Admin
@@ -744,7 +744,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /api/admin/competitions/categories/{id}/results:
+  /api/admin/categories/categories/{id}/results:
     get:
       tags:
         - Admin
@@ -772,7 +772,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /api/admin/competitions/audit-logs:
+  /api/admin/categories/audit-logs:
     get:
       tags:
         - Admin
